<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/masmenos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lvertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textonumeros"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textonumeros2"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linealHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linealV1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/porciento" />

                <Button
                    android:id="@+id/uno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/cuatro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/siete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/masymenos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masmenos" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linealV2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/borrarT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ce" />

                <Button
                    android:id="@+id/dos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/cinco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/ocho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/cero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linealV3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/borrar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/tres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/seis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/nueve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/punto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coma" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linealV4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/divide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/divide" />

                <Button
                    android:id="@+id/resta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menos" />

                <Button
                    android:id="@+id/multiplica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplica" />

                <Button
                    android:id="@+id/suma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mas" />

                <Button
                    android:id="@+id/igual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/igual" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ResultadosLateral"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>